# MPiB

./: CMakeLists.txt  README.md
MPiB/: LSCM.cpp  PI.h  boundary_loop.h  cotmatrix.h  eigs.h  is_border_vertex.h  lscm.h  map_vertices_to_circle.h  massmatrix.h  repdiag.h  sort.h  triangle_triangle_adjacency.h  tutte.cpp  tutte.h  tuttes_embedding.cpp  vector_area_matrix.h  vertex_triangle_adjacency.h
MPiB/old_version/: ObjLoader.cpp  ObjLoader.h  cache.cpp  main.cpp
